	+ searching is now able to highlight letters in multiline text
	- fixed resize panel - min size was not set properly in some cases
	- fixed rare scrolling artifacts
	+ added FindInRow to find value in given row - returns column number

	after 710-dev1

	- in edit row mode null values in not null controls were not respected if grid was "prefilled" with null data
	- fixed crash when adding column to filled grid
	+ grid respects read-only mode now (only resizeing/moving/scrolling works in this mode)
	- fixed bug in GridCtrl::ItemRect::SetFont - it doesn't work and may lead to crash
	- fixed strage bug connected with focus and bulit-in toolbar
	- added WhenChangeCol
	- added GoTo(int r, int c)
	- fixed SetCursor(Point). Point was not relative.
	- fixed searching. If search_hide was disabled after matching 0 rows and then peressing esc or backspace grid displayed nothing
	- fixed selection removing in remove hides mode (mostly crashes, for one row it worked ok).
	- fixed row inserting (after). Previous cursor position didn't disapear (regression)
	+ SetImage() works for row now

	after 711-dev1

	- fixed Remove0 - it didn't clear cursor position if cnt > 1
	- fixed Searching - now the searching flag is respected in immediate searching
	+ AddSeparator(Color c) - inserts 3 pixel height separator
	* IsEnd restores rowidx now - it's now more safe to use FOREACH* macros
	- fixed elipsses in multiline texts
	- fixed Searching() one more time
	- some fixes to sorting
	+ added Skip to ItemRect. If true the given row/col is skipped during Find()
	+ fixed some regressions with painting header
	+ added WhenCursor callback and CancelCursor() to cancel changing cursor position from body
	  of this callback.

	after 711-dev2

	do not remember :)

	after 712-dev1

	* made find stirng control vista compatabile, removed unecessary members
	- fixed coping/paste and WhenInsertRow/WhenUpdateRow issues (wrong rowidx, one callback call
	  for multiple rows)