@@ -1,304 +1,0 @@
-
-
-/* this ALWAYS GENERATED file contains the definitions for the interfaces */
-
-
- /* File created by MIDL compiler version 6.00.0361 */
-/* at Tue Jan 22 18:24:16 2008
- */
-/* Compiler settings for s:\examples\OleCalc\calc.idl:
-    Oicf, W1, Zp8, env=Win32 (32b run)
-    protocol : dce , ms_ext, c_ext, robust
-    error checks: allocation ref bounds_check enum stub_data
-    VC __declspec() decoration level:
-         __declspec(uuid()), __declspec(selectany), __declspec(novtable)
-         DECLSPEC_UUID(), MIDL_INTERFACE()
-*/
-//@@MIDL_FILE_HEADING(  )
-
-#pragma warning( disable: 4049 )  /* more than 64k source lines */
-
-
-/* verify that the <rpcndr.h> version is high enough to compile this file*/
-#ifndef __REQUIRED_RPCNDR_H_VERSION__
-#define __REQUIRED_RPCNDR_H_VERSION__ 475
-#endif
-
-#include "rpc.h"
-#include "rpcndr.h"
-
-#ifndef __RPCNDR_H_VERSION__
-#error this stub requires an updated version of <rpcndr.h>
-#endif // __RPCNDR_H_VERSION__
-
-#ifndef COM_NO_WINDOWS_H
-#include "windows.h"
-#include "ole2.h"
-#endif /*COM_NO_WINDOWS_H*/
-
-#ifndef __calc_idl_h__
-#define __calc_idl_h__
-
-#if defined(_MSC_VER) && (_MSC_VER >= 1020)
-#pragma once
-#endif
-
-/* Forward Declarations */
-
-#ifndef __ICalculator_FWD_DEFINED__
-#define __ICalculator_FWD_DEFINED__
-typedef interface ICalculator ICalculator;
-#endif 	/* __ICalculator_FWD_DEFINED__ */
-
-
-#ifndef __Calculator_FWD_DEFINED__
-#define __Calculator_FWD_DEFINED__
-
-#ifdef __cplusplus
-typedef class Calculator Calculator;
-#else
-typedef struct Calculator Calculator;
-#endif /* __cplusplus */
-
-#endif 	/* __Calculator_FWD_DEFINED__ */
-
-
-/* header files for imported files */
-#include "oaidl.h"
-#include "oleidl.h"
-
-#ifdef __cplusplus
-extern "C"{
-#endif
-
-void * __RPC_USER MIDL_user_allocate(size_t);
-void __RPC_USER MIDL_user_free( void * );
-
-#ifndef __ICalculator_INTERFACE_DEFINED__
-#define __ICalculator_INTERFACE_DEFINED__
-
-/* interface ICalculator */
-/* [helpstring][dual][uuid][object] */
-
-
-EXTERN_C const IID IID_ICalculator;
-
-#if defined(__cplusplus) && !defined(CINTERFACE)
-
-    MIDL_INTERFACE("2CFA5DB2-A740-11d3-981C-000000000000")
-    ICalculator : public IDispatch
-    {
-    public:
-        virtual /* [helpstring][propget][id] */ HRESULT STDMETHODCALLTYPE get_Input(
-            /* [retval][out] */ BSTR *_value) = 0;
-
-        virtual /* [helpstring][propput] */ HRESULT STDMETHODCALLTYPE put_Input(
-            /* [in] */ BSTR _value) = 0;
-
-        virtual /* [helpstring][id] */ HRESULT STDMETHODCALLTYPE Calculate( void) = 0;
-
-        virtual /* [helpstring][propget][id] */ HRESULT STDMETHODCALLTYPE get_Output(
-            /* [retval][out] */ BSTR *value) = 0;
-
-    };
-
-#else 	/* C style interface */
-
-    typedef struct ICalculatorVtbl
-    {
-        BEGIN_INTERFACE
-
-        HRESULT ( STDMETHODCALLTYPE *QueryInterface )(
-            ICalculator * This,
-            /* [in] */ REFIID riid,
-            /* [iid_is][out] */ void **ppvObject);
-
-        ULONG ( STDMETHODCALLTYPE *AddRef )(
-            ICalculator * This);
-
-        ULONG ( STDMETHODCALLTYPE *Release )(
-            ICalculator * This);
-
-        HRESULT ( STDMETHODCALLTYPE *GetTypeInfoCount )(
-            ICalculator * This,
-            /* [out] */ UINT *pctinfo);
-
-        HRESULT ( STDMETHODCALLTYPE *GetTypeInfo )(
-            ICalculator * This,
-            /* [in] */ UINT iTInfo,
-            /* [in] */ LCID lcid,
-            /* [out] */ ITypeInfo **ppTInfo);
-
-        HRESULT ( STDMETHODCALLTYPE *GetIDsOfNames )(
-            ICalculator * This,
-            /* [in] */ REFIID riid,
-            /* [size_is][in] */ LPOLESTR *rgszNames,
-            /* [in] */ UINT cNames,
-            /* [in] */ LCID lcid,
-            /* [size_is][out] */ DISPID *rgDispId);
-
-        /* [local] */ HRESULT ( STDMETHODCALLTYPE *Invoke )(
-            ICalculator * This,
-            /* [in] */ DISPID dispIdMember,
-            /* [in] */ REFIID riid,
-            /* [in] */ LCID lcid,
-            /* [in] */ WORD wFlags,
-            /* [out][in] */ DISPPARAMS *pDispParams,
-            /* [out] */ VARIANT *pVarResult,
-            /* [out] */ EXCEPINFO *pExcepInfo,
-            /* [out] */ UINT *puArgErr);
-
-        /* [helpstring][propget][id] */ HRESULT ( STDMETHODCALLTYPE *get_Input )(
-            ICalculator * This,
-            /* [retval][out] */ BSTR *_value);
-
-        /* [helpstring][propput] */ HRESULT ( STDMETHODCALLTYPE *put_Input )(
-            ICalculator * This,
-            /* [in] */ BSTR _value);
-
-        /* [helpstring][id] */ HRESULT ( STDMETHODCALLTYPE *Calculate )(
-            ICalculator * This);
-
-        /* [helpstring][propget][id] */ HRESULT ( STDMETHODCALLTYPE *get_Output )(
-            ICalculator * This,
-            /* [retval][out] */ BSTR *value);
-
-        END_INTERFACE
-    } ICalculatorVtbl;
-
-    interface ICalculator
-    {
-        CONST_VTBL struct ICalculatorVtbl *lpVtbl;
-    };
-
-
-
-#ifdef COBJMACROS
-
-
-#define ICalculator_QueryInterface(This,riid,ppvObject)	\
-    (This)->lpVtbl -> QueryInterface(This,riid,ppvObject)
-
-#define ICalculator_AddRef(This)	\
-    (This)->lpVtbl -> AddRef(This)
-
-#define ICalculator_Release(This)	\
-    (This)->lpVtbl -> Release(This)
-
-
-#define ICalculator_GetTypeInfoCount(This,pctinfo)	\
-    (This)->lpVtbl -> GetTypeInfoCount(This,pctinfo)
-
-#define ICalculator_GetTypeInfo(This,iTInfo,lcid,ppTInfo)	\
-    (This)->lpVtbl -> GetTypeInfo(This,iTInfo,lcid,ppTInfo)
-
-#define ICalculator_GetIDsOfNames(This,riid,rgszNames,cNames,lcid,rgDispId)	\
-    (This)->lpVtbl -> GetIDsOfNames(This,riid,rgszNames,cNames,lcid,rgDispId)
-
-#define ICalculator_Invoke(This,dispIdMember,riid,lcid,wFlags,pDispParams,pVarResult,pExcepInfo,puArgErr)	\
-    (This)->lpVtbl -> Invoke(This,dispIdMember,riid,lcid,wFlags,pDispParams,pVarResult,pExcepInfo,puArgErr)
-
-
-#define ICalculator_get_Input(This,_value)	\
-    (This)->lpVtbl -> get_Input(This,_value)
-
-#define ICalculator_put_Input(This,_value)	\
-    (This)->lpVtbl -> put_Input(This,_value)
-
-#define ICalculator_Calculate(This)	\
-    (This)->lpVtbl -> Calculate(This)
-
-#define ICalculator_get_Output(This,value)	\
-    (This)->lpVtbl -> get_Output(This,value)
-
-#endif /* COBJMACROS */
-
-
-#endif 	/* C style interface */
-
-
-
-/* [helpstring][propget][id] */ HRESULT STDMETHODCALLTYPE ICalculator_get_Input_Proxy(
-    ICalculator * This,
-    /* [retval][out] */ BSTR *_value);
-
-
-void __RPC_STUB ICalculator_get_Input_Stub(
-    IRpcStubBuffer *This,
-    IRpcChannelBuffer *_pRpcChannelBuffer,
-    PRPC_MESSAGE _pRpcMessage,
-    DWORD *_pdwStubPhase);
-
-
-/* [helpstring][propput] */ HRESULT STDMETHODCALLTYPE ICalculator_put_Input_Proxy(
-    ICalculator * This,
-    /* [in] */ BSTR _value);
-
-
-void __RPC_STUB ICalculator_put_Input_Stub(
-    IRpcStubBuffer *This,
-    IRpcChannelBuffer *_pRpcChannelBuffer,
-    PRPC_MESSAGE _pRpcMessage,
-    DWORD *_pdwStubPhase);
-
-
-/* [helpstring][id] */ HRESULT STDMETHODCALLTYPE ICalculator_Calculate_Proxy(
-    ICalculator * This);
-
-
-void __RPC_STUB ICalculator_Calculate_Stub(
-    IRpcStubBuffer *This,
-    IRpcChannelBuffer *_pRpcChannelBuffer,
-    PRPC_MESSAGE _pRpcMessage,
-    DWORD *_pdwStubPhase);
-
-
-/* [helpstring][propget][id] */ HRESULT STDMETHODCALLTYPE ICalculator_get_Output_Proxy(
-    ICalculator * This,
-    /* [retval][out] */ BSTR *value);
-
-
-void __RPC_STUB ICalculator_get_Output_Stub(
-    IRpcStubBuffer *This,
-    IRpcChannelBuffer *_pRpcChannelBuffer,
-    PRPC_MESSAGE _pRpcMessage,
-    DWORD *_pdwStubPhase);
-
-
-
-#endif 	/* __ICalculator_INTERFACE_DEFINED__ */
-
-
-
-#ifndef __Calculator_TypeLib_LIBRARY_DEFINED__
-#define __Calculator_TypeLib_LIBRARY_DEFINED__
-
-/* library Calculator_TypeLib */
-/* [helpstring][version][uuid] */
-
-
-EXTERN_C const IID LIBID_Calculator_TypeLib;
-
-EXTERN_C const CLSID CLSID_Calculator;
-
-#ifdef __cplusplus
-
-class DECLSPEC_UUID("2CFA5DB1-A740-11d3-981C-000000000000")
-Calculator;
-#endif
-#endif /* __Calculator_TypeLib_LIBRARY_DEFINED__ */
-
-/* Additional Prototypes for ALL interfaces */
-
-unsigned long             __RPC_USER  BSTR_UserSize(     unsigned long *, unsigned long            , BSTR * );
-unsigned char * __RPC_USER  BSTR_UserMarshal(  unsigned long *, unsigned char *, BSTR * );
-unsigned char * __RPC_USER  BSTR_UserUnmarshal(unsigned long *, unsigned char *, BSTR * );
-void                      __RPC_USER  BSTR_UserFree(     unsigned long *, BSTR * );
-
-/* end of Additional Prototypes */
-
-#ifdef __cplusplus
-}
-#endif
-
-#endif
