@@ -5,150 +5,199 @@
 
 T_("Close")
 plPL("Zamknij")
+deDE("Schließen")
 
 T_("Search")
 plPL("")
+deDE("Suchen")
 
 T_("Append")
 plPL("Dodaj")
+deDE("Anfügen")
 
 T_("Insert ")
 plPL("Wstaw")
+deDE("Einfügen")
 
 T_("Duplicate")
 plPL("Zduplikuj")
+deDE("Duplizieren")
 
 T_("Delete ")
 plPL("Usuń")
+deDE("Löschen")
 
 T_("Edit")
 plPL("Edytuj")
+deDE("Bearbeiten")
 
 T_("Accept")
 plPL("Zatwierdź")
+deDE("Bestätigen")
 
 T_("Cancel")
 plPL("Anuluj")
+deDE("Abruch")
 
 T_("Move up")
 plPL("Przesuń do góry")
+deDE("Nach oben")
 
 T_("Move down")
 plPL("Przesuń w dół")
+deDE("Nach unten")
 
 T_("First %s")
 plPL("Pierwszy %s")
+deDE("Erster %s")
 
 T_("Previous %s")
 plPL("Poprzedni %s")
+deDE("Vorheriger %s")
 
 T_("Next %s")
 plPL("Następny %s")
+deDE("Nächster %s")
 
 T_("Last %s")
 plPL("Ostatni %s")
+deDE("Letzter %s")
 
 T_("Immediate search")
 plPL("Wyszukiwanie natychmiastowe")
+deDE("Sofort suchen")
 
 T_("Hide rows")
 plPL("Ukrywaj niepasujące wiersze")
+deDE("Reihen ausblenden")
 
 T_("Highlight found cells")
 plPL("Podświetlaj znalezione komórki")
+deDE("Markiere gefundene Zellen")
 
 T_("Case sensitive")
 plPL("Rozróżniaj małe i duże litery")
+deDE("Gross-/Kleinschreibung beachten")
 
 T_("row")
 plPL("wiersz")
+deDE("Reihe")
 
 T_("Insert a new %s into the table.")
 plPL("Wstawia nowy %s do tabeli.")
+deDE("Neuen %s in die Tabelle einfügen")
 
 T_("Insert before")
 plPL("Wstaw przed")
+deDE("Davor einfügen")
 
 T_("Insert a new %s into the table before current")
 plPL("Wstawia nowy %s do tabeli przed aktualnym")
+deDE("Neuen %s in die Tabelle vor aktuellen einfügen")
 
 T_("Insert after")
 plPL("Wstaw za")
+deDE("Danach einfügen")
 
 T_("Insert a new %s into the table after current")
 plPL("Wstawia nowy %s do tabeli po aktualnym")
+deDE("Neuen %s in die Tabelle nach aktuellen einfügen")
 
 T_("Append a new %s at the end of the table.")
 plPL("Dodaje nowy %s na końcu tabeli.")
+deDE("")
 
 T_("Duplicate current table %s.")
 plPL("Utwórz duplikat aktualnej tabeli %s.")
+deDE("Neuen %s in die Tabelle am Ende einfügen")
 
 T_("Edit active %s.")
 plPL("Edytuje aktualny %s.")
+deDE("Aktuellen %s bearbeiten")
 
 T_("Delete active %s.")
 plPL("Usuń aktualny %s.")
+deDE("Aktuellen %s löschen")
 
 T_("Select all")
 plPL("Zaznacz wszystkie")
+deDE("Alle auswählen")
 
 T_("Select all table rows")
 plPL("Zaznacz wszystkie wiersze tabeli")
+deDE("Alle Reihen auswählen")
 
 T_("Columns")
 plPL("Kolumny")
+deDE("Spalten")
 
 T_("Copy")
 plPL("Kopiuj")
+deDE("Kopieren")
 
 T_("Cut")
 plPL("Wytnij")
+deDE("Ausschneiden")
 
 T_("Paste")
 plPL("Wklej")
+deDE("Einfügen")
 
 T_("Paste as")
 plPL("Wklej jako")
+deDE("Einfügen als")
 
 T_("appended")
 plPL("dodane")
+deDE("anhängen")
 
 T_("inserted")
 plPL("wstawione")
+deDE("einfügen")
 
 T_("Moving selection (%d %s) before row %d")
 plPL("Przenoszenie selekcji (%d %s) przed %d wiersz")
+deDE("Verschieben der Auswahl (%d %s) vor Reihe %d")
 
 T_("rows")
 plPL("wierszy")
+deDE("Reihen")
 
 T_("Moving row %d before row %d")
 plPL("Przenoszenie wiersza %d przed wiersz %d")
+deDE("Verschieben der Reihe %d vor Reihe %d")
 
 T_("Moving %d %s before row %d")
 plPL("Przenoszenie %d %s przed wiersz %d")
+deDE("Verschieben %d %s vor Reihe %d")
 
 T_("cell")
 plPL("komórki")
+deDE("Zelle")
 
 T_("cells")
 plPL("komórek")
+deDE("Zellen")
 
 
 // Obsolete
 
 T_("Do you really want to delete the selected %s ?")
 plPL("Czy na pewno chcesz usunąć zaznaczone %s ?")
+deDE("Möchten sie wirklich die ausgewählte %s löschen?")
 
 T_("Swap %s with previous thus moving it up.")
 plPL("Zamień %s z poprzednim przesuwając go do góry.")
+deDE("Vertauschen der %s mit dem Vorgänger zum Aufwärtsbewegen.")
 
 T_("Swap %s with next thus moving it down.")
 plPL("Zamień %s z następnym przesuwając go w dół.")
+deDE("Vertauschen der %s mit dem Nachfolger zum Abwärtsbewegen")
 
 T_("Find")
 plPL("Znajdź")
+deDE("Suchen")
 
 T_("Find options")
 plPL("Opcje szukania")
+deDE("Suche Optionen")
